# KayOS-Kay.ky-language

./: Cargo.toml  README.md  boot.ky  web_files.txt  wrangler.jsonc  wrangler.toml
ai/: update_engine.ky
examples/: hello.ky  port_scanner.ky
scripts/gui/: setup_gui.sh
scripts/iso/: build_iso.sh
scripts/os/: install_all_tools.sh  setup_desktop.sh
src/: lib.rs  main.rs  repl.rs
src/ast/: mod.rs
src/compiler/: compiler.rs
src/lexer/: mod.rs
src/os/: mod.rs  shell.rs
src/os/tools/: mod.rs  net_map.rs
src/package_manager/: main.rs
src/parser/: mod.rs
src/plans/: implementasi_final_tooling.md
src/runtime/: builtins.rs  mod.rs
src/std/: mod.rs
src/std/io/: mod.rs
src/std/math/: mod.rs
src/std/net/: mod.rs
src/std/string/: mod.rs
src/std/sys/: mod.rs
src/vm/: chunk.rs  mod.rs  opcode.rs  tests.rs  vm.rs
vscode-extension/: language-configuration.json  package.json
vscode-extension/syntaxes/: kay.tmLanguage.json
web/: docs.html  index.html  news.json  wrangler.jsonc
web/css/: main.css
